--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,9 @@ body {
   font-family: sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-weight: 700;
 }
 
@@ -77,4 +79,24 @@ nav a {
 
 nav a:hover {
   color: var(--blue-200);
+}
+
+#about article {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+#about img {
+  width: 200px;
+  flex-shrink: 0;
+}
+
+#about p {
+  flex: 1;
+}
+
+#video figure {
+  display: flex;
+  justify-content: center;
 }
