--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@
 
 :root {
   --blue-200: #abc7e2;
-  --blue-500: #1e90ff;
-  --blue-800: #0c7570;
+  --blue-500: #1effc7;
+  --blue-800: #0b7570;
   --gray-400: #d9e7d9;
   --black-800: #1f1d1d;
   --white: #f5f7fa;
@@ -137,4 +137,51 @@ footer img:hover {
           hue-rotage(213deg)
           brightness(86%)
           contrast(88%)  
+}
+
+.main_contato {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  width: 90%;
+  margin: 2rem auto;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding: 1.5rem;
+  border-radius: 0.75rem;
+}
+
+form input, textarea {
+  padding: 0.5rem;
+  border-radius:  0.75rem;
+  border: none;
+  font-size: 1rem;
+}
+
+textarea {
+  resize: none;
+  height: 5rem;
+}
+
+form button {
+  background: var(--blue-800);
+  color: var(--white);
+  padding: 0.75rem;
+  border: 1 px solid var(--blue-500);
+  border-radius: 0.75rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+form button:hover {
+  background: var(--blue-500);
+}
+
+form span{
+  color: #ff0000;
+  font-size: 0.75rem;
 }
