--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ nav a {
 }
 
 nav a:hover {
-  color: var(--blue-200);
+  color: var(--blue-500);
 }
 
 #about article {
@@ -122,21 +122,15 @@ footer section {
 
 footer img {
   width: 2rem;
-  height:  2rem;
+  height: 2rem;
   display: block;
   filter: invert(100%);
   transition: filter 0.3s;
 }
 
 footer img:hover {
-  filter: brightness(0)
-          saturate(100%)
-          invert(65%)
-          sepia(59%)
-          saturate(2437%)
-          hue-rotage(213deg)
-          brightness(86%)
-          contrast(88%)  
+  filter: brightness(0) saturate(100%) invert(65%) sepia(59%) saturate(2437%)
+    hue-rotage(213deg) brightness(86%) contrast(88%);
 }
 
 .main_contato {
@@ -155,9 +149,10 @@ form {
   border-radius: 0.75rem;
 }
 
-form input, textarea {
+form input,
+textarea {
   padding: 0.5rem;
-  border-radius:  0.75rem;
+  border-radius: 0.75rem;
   border: none;
   font-size: 1rem;
 }
@@ -181,7 +176,30 @@ form button:hover {
   background: var(--blue-500);
 }
 
-form span{
-  color: #ff0000;
+form span {
+  color: #cc1212;
   font-size: 0.75rem;
+}
+
+.article_mapa {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  background: var(--white);
+  padding: 1.5rem;
+  border-radius: 0.75rem;
+}
+
+.article_mapa address {
+  width: 75%;
+}
+
+.article_mapa address p {
+  font-weight: 600;
+}
+
+.article_mapa iframe {
+  align-self: center;
 }
