--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,3 +203,62 @@ form span {
 .article_mapa iframe {
   align-self: center;
 }
+
+/* Seção Extra: Projetos */
+#projects {
+  width: 90%;
+  margin: 2rem auto;  /* Centraliza horizontalmente */
+  display: flex;
+  flex-wrap: wrap; /* Permite quebrar linha */
+  gap: 1rem;
+  justify-content: center;
+  font-family: sans-serif; 
+}
+
+#projects h2 {
+  width: 100%;
+  color: var(--black-800);
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: justify;
+  margin-bottom: 1rem;
+}
+
+.project-card {
+  background: var(--white);
+  color: var(--black-800);
+  width: 250px;
+  padding: 1rem;
+  border-radius: 0.75rem;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.project-card h3 {
+  color: var(--black-800);
+  font-size: 1rem;
+  text-align: center;
+}
+
+.project-card p {
+  font-size: 0.95rem;
+  line-height: 1.3rem;
+  text-align: justify;
+}
+
+.project-card a {
+  text-align: center;
+  text-decoration: none;
+  background: var(--blue-800);
+  color: var(--white);
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  font-weight: 600;
+}
+
+.project-card a:hover {
+  background: var(--blue-500);
+}
+
